--- a/cetrtificate.html
+++ b/cetrtificate.html
@@ -48,8 +48,12 @@
       <img src="/img/certificateResponsive.png" alt="Cetrtificate SheCodes Responsive" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate SheCodes Responsive">
     </div>
     <div class="col-md-6">
-      <img src="/img/CertificatePrometeus.png" alt="Cetrtificate SheCodes Plus" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate SheCodes Plus">
+      <img src="/img/certificateReact.png" alt="Cetrtificate SheCodes React" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate SheCodes React">
     </div>
+    <div class="col-md-6">
+      <img src="/img/CertificatePrometeus.png" alt="Cetrtificate Prometeus" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate Prometeus">
+    </div>
+    
   </div>
 </div>
 
