add certificate cursera js

--- a/cetrtificate.html
+++ b/cetrtificate.html
@@ -53,6 +53,9 @@
     <div class="col-md-6">
       <img src="/img/CertificatePrometeus.png" alt="Cetrtificate Prometeus" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate Prometeus">
     </div>
+    <div class="col-md-6">
+      <img src="/img/CertificateCursersJS.png" alt="Cetrtificate Cursera JS" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate Cursera">
+    </div>
     
   </div>
 </div>
