--- a/cetrtificate.html
+++ b/cetrtificate.html
@@ -37,24 +37,26 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <img src="/img/certificatBasic.png" alt="Cetrtificate SheCodes Basics" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate SheCodes Basics">
+      <img src="/img/certificatBasic.png" width="700" alt="Cetrtificate SheCodes Basics" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate SheCodes Basics">
     </div>
     <div class="col-md-6">
-      <img src="/img/certificatePlus.png" alt="Cetrtificate SheCodes Plus" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate SheCodes Plus">
+      <img src="/img/certificatePlus.png" width="700"  alt="Cetrtificate SheCodes Plus" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate SheCodes Plus">
     </div>
   </div>
   <div class="row">
     <div class="col-md-6">
-      <img src="/img/certificateResponsive.png" alt="Cetrtificate SheCodes Responsive" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate SheCodes Responsive">
+      <img src="/img/certificateResponsive.png" width="700"  alt="Cetrtificate SheCodes Responsive" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate SheCodes Responsive">
     </div>
     <div class="col-md-6">
-      <img src="/img/certificateReact.png" alt="Cetrtificate SheCodes React" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate SheCodes React">
+      <img src="/img/certificateReact.png" width="700"  alt="Cetrtificate SheCodes React" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate SheCodes React">
+    </div>
+    </div>
+    <div class="row">
+    <div class="col-md-6">
+      <img src="/img/CertificatePrometeus.png" width="700"  alt="Cetrtificate Prometeus" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate Prometeus">
     </div>
     <div class="col-md-6">
-      <img src="/img/CertificatePrometeus.png" alt="Cetrtificate Prometeus" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate Prometeus">
-    </div>
-    <div class="col-md-6">
-      <img src="/img/CertificateCursersJS.png" alt="Cetrtificate Cursera JS" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate Cursera">
+      <img src="/img/CertificateCursersJS.png" width="580"  alt="Cetrtificate Cursera JS" class="img-fluid rounded shadow-lg m-3 " title="Cetrtificate Cursera">
     </div>
     
   </div>
