--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <h1>Tatiana Mytsianka</h1>
     <h2>Front-end Developer from Ukraine</h2>
     <p class="introduce m-3">
-        I'm a software engineer with a passion for building and designing exceptional user experiences. I'm currently looking for a role with a fast-paced, socially-conscious company in the UK, Europe or Ukraine.
+        I'm a frontend developer with a passion for building and designing exceptional user experiences. I'm currently looking for a role with a fast-paced, socially-conscious company in the UK, Europe or Ukraine.
     </p>
     <button class="check-out-works shadow" title="Check out works by Tatiana Mytsianka"> 
       <a href="/works.html" class="link-btn">Check out my works</a>
